# mapbox-gl-native

./: .gitmodules  CMakeLists.txt  Makefile  circle.yml
benchmark/: CMakeLists.txt
cmake/: core.cmake  test-runner.cmake  vendor.cmake
core/: CMakeLists.txt
gfx/gl/: CMakeLists.txt
include/mbgl/storage/: default_file_source.hpp
include/mbgl/style/: types.hpp
include/mbgl/style/expression/: number_format.hpp
include/mbgl/style/layers/: symbol_layer.hpp
platform/android/: .gitignore  build.gradle  core-files.json  settings.gradle
platform/android/MapboxGLAndroidSDK/src/main/java/com/mapbox/mapboxsdk/camera/: CameraUpdateFactory.java
platform/android/MapboxGLAndroidSDK/src/main/java/com/mapbox/mapboxsdk/location/: LocationAnimatorCoordinator.java  LocationComponent.java  LocationComponentOptions.java  LocationLayerController.java  MapboxAnimator.java  PulsingLocationCircleAnimator.java
platform/android/MapboxGLAndroidSDK/src/main/java/com/mapbox/mapboxsdk/maps/: MapGestureDetector.java  MapView.java  MapboxMap.java
platform/android/MapboxGLAndroidSDK/src/main/java/com/mapbox/mapboxsdk/style/layers/: PropertyFactory.java  SymbolLayer.java
platform/android/MapboxGLAndroidSDK/src/main/res-public/values/: public.xml
platform/android/MapboxGLAndroidSDK/src/main/res/values/: attrs.xml
platform/android/MapboxGLAndroidSDKDownstreamApp/: build.gradle
platform/android/MapboxGLAndroidSDKDownstreamApp/src/androidTest/java/com/mapbox/mapboxsdk/downstream/: ExampleInstrumentedTest.kt
platform/android/MapboxGLAndroidSDKDownstreamApp/src/main/: AndroidManifest.xml
platform/android/MapboxGLAndroidSDKDownstreamApp/src/main/java/com/mapbox/mapboxsdk/downstream/: MainActivity.java  MapActivity.java
platform/android/MapboxGLAndroidSDKDownstreamApp/src/main/res/layout/: activity_donwload.xml  activity_main.xml
platform/android/MapboxGLAndroidSDKDownstreamApp/src/main/res/values/: strings.xml
platform/android/MapboxGLAndroidSDKDownstreamApp/src/test/java/com/mapbox/mapboxsdk/downstream/: ExampleUnitTest.kt
platform/android/MapboxGLAndroidSDKTestApp/src/androidTest/java/com/mapbox/mapboxsdk/maps/: CameraUpdateFactoryTest.kt
platform/android/MapboxGLAndroidSDKTestApp/src/androidTest/java/com/mapbox/mapboxsdk/testapp/style/: SymbolLayerTest.java
platform/android/MapboxGLAndroidSDKTestApp/src/main/: AndroidManifest.xml
platform/android/MapboxGLAndroidSDKTestApp/src/main/assets/: streets.json
platform/android/MapboxGLAndroidSDKTestApp/src/main/java/com/mapbox/mapboxsdk/testapp/: MapboxApplication.java
platform/android/MapboxGLAndroidSDKTestApp/src/main/java/com/mapbox/mapboxsdk/testapp/activity/camera/: LatLngBoundsActivity.kt
platform/android/MapboxGLAndroidSDKTestApp/src/main/java/com/mapbox/mapboxsdk/testapp/activity/location/: LocationPulsingCircleActivity.java
platform/android/MapboxGLAndroidSDKTestApp/src/main/java/com/mapbox/mapboxsdk/testapp/activity/maplayout/: SimpleMapActivity.java
platform/android/MapboxGLAndroidSDKTestApp/src/main/res/values/: descriptions.xml
platform/android/src/style/layers/: symbol_layer.cpp  symbol_layer.hpp
platform/darwin/scripts/: generate-style-code.js
platform/darwin/src/: MGLStyleLayer.h.ejs  MGLStyleLayer.mm.ejs  MGLSymbolStyleLayer.h  MGLSymbolStyleLayer.mm  string_nsstring.mm
platform/darwin/test/: MGLSymbolStyleLayerTests.mm
platform/default/src/mbgl/storage/: default_file_source.cpp  file_source.cpp
platform/glfw/: CMakeLists.txt  main.cpp
platform/ios/: CHANGELOG.md  core-files.json
platform/ios/Integration Tests/Annotation Tests/: MGLAnnotationViewIntegrationTests.m
platform/ios/app/: MBXViewController.m
platform/ios/src/: MGLMapView+Impl.h  MGLMapView+Impl.mm  MGLMapView.h  MGLMapView.mm  MGLMapView_Private.h
platform/linux/: CMakeLists.txt  config.cmake
platform/macos/: CHANGELOG.md  core-files.json
platform/macos/src/: MGLMapView+Impl.mm  MGLMapView.h  MGLMapView.mm
platform/node/test/: ignores.json
platform/qt/: config.cmake  qt.cmake
platform/qt/resources/: common.qrc
platform/qt/src/: FormatNumber.qml  format_number.cpp
scripts/: generate-file-lists.js  generate-shaders.js
src/: core-files.json
src/mbgl/actor/: scheduler.cpp
src/mbgl/annotation/: render_annotation_source.hpp
src/mbgl/layout/: symbol_feature.hpp  symbol_instance.cpp  symbol_instance.hpp  symbol_layout.cpp  symbol_layout.hpp
src/mbgl/map/: map.cpp
src/mbgl/renderer/: backend_scope.cpp  render_source.hpp  renderer_impl.cpp  renderer_impl.hpp  tile_pyramid.cpp  tile_pyramid.hpp
src/mbgl/renderer/buckets/: symbol_bucket.cpp  symbol_bucket.hpp
src/mbgl/renderer/sources/: render_image_source.cpp  render_image_source.hpp  render_raster_dem_source.hpp  render_raster_source.hpp  render_tile_source.cpp  render_tile_source.hpp
src/mbgl/style/: types.cpp
src/mbgl/style/conversion/: constant.cpp  function.cpp  property_value.cpp
src/mbgl/style/expression/: number_format.cpp  value.cpp
src/mbgl/style/layers/: symbol_layer.cpp  symbol_layer_properties.hpp
src/mbgl/text/: placement.cpp  placement.hpp
src/mbgl/tile/: geometry_tile.cpp  geometry_tile.hpp  tile.hpp
test/: CMakeLists.txt  test-files.json
test-runner/: main.cpp  metadata.hpp  parser.cpp  parser.hpp  runner.cpp
test/fixtures/expression_equality/: number-format-currency.a.json  number-format-default.b.json
test/gl/: bucket.test.cpp
test/src/mbgl/test/: test.cpp
test/text/: cross_tile_symbol_index.test.cpp
