add_library(mbgl-core STATIC
    ${CMAKE_CURRENT_LIST_DIR}/src/csscolorparser/csscolorparser.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/actor/mailbox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/actor/scheduler.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/annotation/annotation_manager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/annotation/annotation_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/annotation/annotation_tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/annotation/fill_annotation_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/annotation/line_annotation_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/annotation/render_annotation_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/annotation/shape_annotation_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/annotation/symbol_annotation_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/geometry/dem_data.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/geometry/feature_index.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/geometry/line_atlas.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gfx/attribute.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gfx/renderer_backend.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/attribute.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/command_encoder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/context.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/debugging_extension.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/enum.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/object.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/offscreen_texture.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/render_pass.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/renderer_backend.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/texture.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/uniform.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/upload_pass.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/value.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/gl/vertex_array.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/background_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/circle_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/custom_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/fill_extrusion_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/fill_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/heatmap_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/hillshade_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/layer_manager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/line_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/raster_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layermanager/symbol_layer_factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layout/clip_lines.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layout/merge_lines.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layout/symbol_instance.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layout/symbol_layout.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/layout/symbol_projection.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/map/map.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/map/map_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/map/map_options.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/map/transform.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/map/transform_state.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/math/log2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/platform/gl_functions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/background_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/circle_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/clipping_mask_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/collision_box_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/debug_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/fill_extrusion_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/fill_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/background.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/background_pattern.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/circle.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/clipping_mask.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/collision_box.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/collision_circle.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/debug.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/fill.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/fill_extrusion.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/fill_extrusion_pattern.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/fill_outline.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/fill_outline_pattern.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/fill_pattern.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/heatmap.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/heatmap_texture.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/hillshade.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/hillshade_prepare.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/line.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/line_gradient.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/line_pattern.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/line_sdf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/raster.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/shader_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/shaders.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/symbol_icon.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/symbol_sdf_icon.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/gl/symbol_sdf_text.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/heatmap_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/heatmap_texture_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/hillshade_prepare_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/hillshade_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/line_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/program_parameters.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/programs.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/raster_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/programs/symbol_program.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/backend_scope.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/bucket_parameters.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/circle_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/debug_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/fill_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/fill_extrusion_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/heatmap_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/hillshade_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/line_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/raster_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/buckets/symbol_bucket.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/cross_faded_property_evaluator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/group_by_layout.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/image_atlas.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/image_manager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_background_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_circle_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_custom_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_fill_extrusion_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_fill_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_heatmap_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_hillshade_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_line_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_raster_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/layers/render_symbol_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/paint_parameters.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/pattern_atlas.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/render_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/render_light.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/render_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/render_static_data.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/render_tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/renderer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/renderer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/renderer_state.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/sources/render_custom_geometry_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/sources/render_geojson_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/sources/render_image_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/sources/render_raster_dem_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/sources/render_raster_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/sources/render_tile_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/sources/render_vector_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/style_diff.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/renderer/tile_pyramid.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/sprite/sprite_loader.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/sprite/sprite_loader_worker.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/sprite/sprite_parser.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/storage/file_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/storage/network_status.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/storage/resource.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/storage/resource_options.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/storage/resource_transform.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/storage/response.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/color_ramp_property_value.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/constant.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/coordinate.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/custom_geometry_source_options.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/filter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/function.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/geojson.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/geojson_options.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/get_json_type.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/light.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/position.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/property_value.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/tileset.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/conversion/transition_options.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/custom_tile_loader.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/assertion.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/at.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/boolean_operator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/case.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/check_subtype.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/coalesce.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/coercion.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/collator_expression.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/comparison.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/compound_expression.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/dsl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/expression.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/find_zoom_curve.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/format_expression.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/formatted.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/get_covering_stops.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/interpolate.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/is_constant.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/is_expression.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/length.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/let.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/literal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/match.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/parsing_context.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/step.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/util.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/expression/value.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/filter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/image.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/image_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/background_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/background_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/background_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/circle_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/circle_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/circle_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/custom_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/custom_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/fill_extrusion_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/fill_extrusion_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/fill_extrusion_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/fill_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/fill_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/fill_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/heatmap_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/heatmap_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/heatmap_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/hillshade_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/hillshade_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/hillshade_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/line_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/line_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/line_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/raster_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/raster_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/raster_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/symbol_layer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/symbol_layer_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/layers/symbol_layer_properties.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/light.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/light_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/parser.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/property_expression.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/source_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/custom_geometry_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/custom_geometry_source_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/geojson_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/geojson_source_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/image_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/image_source_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/raster_dem_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/raster_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/raster_source_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/vector_source.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/sources/vector_source_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/style.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/style_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/style/types.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/check_max_angle.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/collision_feature.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/collision_index.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/cross_tile_symbol_index.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/get_anchors.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/glyph.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/glyph_atlas.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/glyph_manager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/glyph_pbf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/language_tag.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/placement.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/quads.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/shaping.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/text/tagged_string.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/custom_geometry_tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/geojson_tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/geometry_tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/geometry_tile_data.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/geometry_tile_worker.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/raster_dem_tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/raster_dem_tile_worker.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/raster_tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/raster_tile_worker.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/tile_cache.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/tile_id_hash.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/tile_id_io.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/vector_tile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/tile/vector_tile_data.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/chrono.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/color.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/compression.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/constants.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/convert.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/dtoa.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/event.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/font_stack.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/geo.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/geojson_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/grid_index.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/http_header.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/http_timeout.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/i18n.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/id.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/interpolate.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/intersection_tests.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/io.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/logging.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/mapbox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/mat2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/mat3.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/mat4.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/premultiply.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/rapidjson.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/stopwatch.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/string.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/thread_pool.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/tile_cover.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/tile_cover_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/tiny_sdf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/url.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/version.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/work_request.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/parsedate/parsedate.cpp
)

set_source_files_properties(${CMAKE_CURRENT_LIST_DIR}/src/mbgl/util/version.cpp
    PROPERTIES COMPILE_DEFINITIONS MBGL_VERSION_REV="FIXME"
)

# FIXME: "src" should not be a public header, but currently
# platform is depending on it for things like glyph rasterizer
target_include_directories(mbgl-core PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/include
    ${CMAKE_CURRENT_LIST_DIR}/src
)

include(${PROJECT_SOURCE_DIR}/vendor/boost.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/earcut.hpp.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/eternal.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/expected.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/geojson-vt-cpp.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/geojson.hpp.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/geometry.hpp.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/kdbush.hpp.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/polylabel.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/protozero.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/rapidjson.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/shelf-pack-cpp.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/supercluster.hpp.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/unique_resource.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/variant.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/vector-tile.cmake)
include(${PROJECT_SOURCE_DIR}/vendor/wagyu.cmake)

target_link_libraries(mbgl-core PRIVATE
    boost
    earcut.hpp
    eternal
    geojson-vt-cpp
    kdbush.hpp
    polylabel
    supercluster.hpp
    wagyu
)

# FIXME: Ideally we should not leak any external
# dependencies for other libraries depending on
# mbgl-core.
target_link_libraries(mbgl-core PUBLIC
    expected
    geojson.hpp
    geometry.hpp
    protozero
    rapidjson
    shelf-pack-cpp
    unique_resource
    variant
    vector-tile
)

add_library(Mapbox::Maps::Core ALIAS mbgl-core)
